fix(cloudtrail): drain flush backlogs safely (#3293)